--- a/package.json
+++ b/package.json
@@ -44,9 +44,9 @@
     "tough-cookie": "^4.1.2"
   },
   "devDependencies": {
+    "@types/node": "^14.18.36",
     "del-cli": "^5.0.0",
     "tsup": "^6.6.3",
-    "@types/node": "14.18.36",
     "typescript": "^4.9.5"
   }
 }
