Support both cjs & esm

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,8 +7,7 @@
     "strict": false,
     "forceConsistentCasingInFileNames": true,
     "esModuleInterop": true,
-    "module": "esnext",
-    "moduleResolution": "node",
+    "module": "commonjs",
     "resolveJsonModule": true,
     "isolatedModules": true,
     "baseUrl": ".",
