--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "cgpt-token",
-  "version": "1.0.0",
+  "name": "bhhoang-gpt-token",
+  "version": "1.0.2",
   "description": "OpenAI Authentication Library for ChatGPT.",
   "type": "module",
   "source": "./src/index.ts",
@@ -12,7 +12,8 @@
     ".": {
       "import": "./build/index.js",
       "types": "./build/index.d.ts",
-      "default": "./build/index.js"
+      "default": "./build/index.cjs",
+      "require": "./build/index.cjs"
     }
   },
   "engines": {
@@ -33,7 +34,7 @@
     "gpt-3"
   ],
   "author": "bincooo",
-  "repository": "bincooo/openai-token",
+  "repository": "bhhoang/openai-token",
   "license": "MIT",
   "dependencies": {
     "axios": "^1.3.3",
